# BINANCE_tradingBot

./: .gitignore  README.md  cli.py  pyproject.toml
bot/: __init__.py  client.py  exceptions.py  logging_config.py  models.py  orders.py  validators.py
config/: settings.py
tests/: test_orders.py  test_validators.py
