[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trading-bot"
version = "1.0.0"
description = "Binance Futures Testnet trading bot — MARKET, LIMIT, TWAP orders via CLI"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer[all]>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
trading-bot = "cli:app"

# ------------------------------------------------------------------
# Ruff — linter + formatter
# ------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["bot", "config"]

# ------------------------------------------------------------------
# mypy — static type checking
# ------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

# ------------------------------------------------------------------
# pytest
# ------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
